Podzial plikow, stworzenie klasy genereujacej sygnal wejsciowy sinusoidalny

--- a/jupyters/mel_spectogram.ipynb
+++ b/jupyters/mel_spectogram.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "Text(0, 0.5, 'Amplitude')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "Text(0.5, 1.0, 'Spectrogram')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
    "source": [
     "spec = np.abs(librosa.stft(y, hop_length=512))\n",
     "spec = librosa.amplitude_to_db(spec, ref=np.max)\n",
-    "librosa.display.specshow(spec, sample_rate=sample_rate, x_axis='time', y_axis='log');\n",
+    "librosa.display.specshow(spec, sr=sample_rate, x_axis='time', y_axis='log');\n",
     "plt.colorbar(format='%+2.0f dB');\n",
     "plt.title('Spectrogram')"
    ]
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
